# rank_in_range

./: .gitignore  CMakeLists.txt  README.md
include/rank_in_range/: rank_in_range.h
tests/: test_rank_in_range.cpp
